# ChangeLog for media-gfx/actdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jul 2011; James Rowe <jnrowe@gmail.com> actdiag-0.1.5.ebuild:
  Keyworded ~x86.

*actdiag-0.1.5 (01 Jul 2011)

  01 Jul 2011; James Rowe <jnrowe@gmail.com> +actdiag-0.1.5.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [364].
