@@ -2,14 +2,16 @@
 Hash: SHA512
 
 DIST actdiag-0.1.5.tar.gz 21078 RMD160 2845fddc8c8dd48c4703ed4221d0ff2b164f86de SHA1 edcf6474be3c3da393fe01d78b34633c1ea9193f SHA256 22eb8cb9f26f76b98cec8856b368cc8263597234f7f8b159e0cc7b6f9f6b9643
+DIST actdiag-0.1.7.tar.gz 21092 RMD160 958561cc9f1782d293e1e32a53a0a8570bd06c6b SHA1 8285c05b0d26b8ef70d77d85513c171c1fdc2187 SHA256 80fd39d1ee3704162eb27e6373447030687951002e9c1b1917642d78028b97af
 EBUILD actdiag-0.1.5.ebuild 973 RMD160 c65f456639a42c49e0cf69029a104e9ced8466e8 SHA1 0df64f98cf8bf76a88d043f73e0bb57e240c00b5 SHA256 8c4cd363d42190d192a3d5d5d59f9d689e8f7503e661b3bb57a896a3c0a2d565
-MISC ChangeLog 359 RMD160 8354c5c78369966111d498c1c5212fe83753706f SHA1 f4b8365452307d6af9e0f8d6a53b108e0e919cc1 SHA256 d1ee3ad27cba35a578bfe2eeeb0bc453bca5d57a5fef31e4e58f955e10487d6a
-MISC metadata.xml 744 RMD160 8b5727350e4bf33a6feb7070f74b5aa384f726d8 SHA1 fa28cdce00a1e5adfb100be2b1edac3c182b585b SHA256 3487b1eaa5f37314487769f36a069027074a9c01e491abdfd8980a4397e9f728
+EBUILD actdiag-0.1.7.ebuild 973 RMD160 c65f456639a42c49e0cf69029a104e9ced8466e8 SHA1 0df64f98cf8bf76a88d043f73e0bb57e240c00b5 SHA256 8c4cd363d42190d192a3d5d5d59f9d689e8f7503e661b3bb57a896a3c0a2d565
+MISC ChangeLog 496 RMD160 88c38267a7505053d6243022b5539581dcff1cfa SHA1 f2af909771ccaf39a71ebea0b33bea2e64912a60 SHA256 2308239b3081b07d2f0c0986ee01ff07d82f6bf46c4453e1fa8c0247fd19f648
+MISC metadata.xml 737 RMD160 f1c314b74e22085a0a5adbce08b5c541d703fa9c SHA1 f9519f6fa70000becedd34c5e224da1ad8f94c52 SHA256 7c4e772f273ed190bdd741a7e94a576e7d4e284417409cd180e581c90a744199
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4PP2YACgkQzJrj3cAXR0nMyQCfZPk5P1ZXN4r536ALyXCUy4Bl
-p4wAnjdCXvDhB5P6ZuieEZ7f+uBvEatR
-=J1XB
+iEYEAREKAAYFAk4YWCkACgkQzJrj3cAXR0lvlACeKHa2g9mmz6J9Psf8Ls97tMd0
+RikAn0gqAA2SLz3o1/hE+i0SDLkPfrEB
+=vUGX
 -----END PGP SIGNATURE-----
