@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+>=media-gfx/blockdiag-0.8.1 !minimal? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+0
+mirror://pypi/a/actdiag/actdiag-0.1.7.tar.gz
+
+http://pypi.python.org/pypi/actdiag/
+Apache-2.0
+Generate activity-diagram image file from spec-text file
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+minimal
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
