@@ -59,6 +59,8 @@
 * app-text/html2rest-0.2.1                  amd64 SCHEDULED: <2011-08-05 Fri>
 * dev-python/rstctl-0.4                     amd64 SCHEDULED: <2011-08-08 Mon>
 * dev-python/rstctl-0.4                       x86 SCHEDULED: <2011-08-08 Mon>
+* media-gfx/actdiag-0.1.7                   amd64 SCHEDULED: <2011-08-08 Mon>
+* media-gfx/actdiag-0.1.7                     x86 SCHEDULED: <2011-08-08 Mon>
 * dev-perl/Net-Twitter-Lite-0.10004         amd64 SCHEDULED: <2011-08-15 Mon>
 * dev-perl/Net-Twitter-Lite-0.10004           x86 SCHEDULED: <2011-08-15 Mon>
 * dev-python/twython-1.4.2                  amd64 SCHEDULED: <2011-08-16 Tue>
