@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*actdiag-0.1.7 (09 Jul 2011)
+
+  09 Jul 2011; James Rowe <jnrowe@gmail.com> +actdiag-0.1.7.ebuild,
+  metadata.xml:
+  Version bump [418].
+
   02 Jul 2011; James Rowe <jnrowe@gmail.com> actdiag-0.1.5.ebuild:
   Keyworded ~x86.
 
